Actualizar la configuración de CORS en SecurityConfig para permitir solo orígenes específicos, mejorando la seguridad de la aplicación.